--- a/src/style.sass
+++ b/src/style.sass
@@ -1,9 +1,11 @@
 @charset 'utf-8'
 @import '../node_modules/bulma/bulma.sass'
 @import 'blackjack.sass'
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
 
 html
 	overflow: auto
+	font-family: Open Sans
 
 .navbar-brand img
 	height: 3.25rem
