--- a/src/style.sass
+++ b/src/style.sass
@@ -1,6 +1,8 @@
 @charset 'utf-8'
 @import '../node_modules/bulma/bulma.sass'
 @import 'blackjack.sass'
+@import '../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss'
+@import '../node_modules/@fortawesome/fontawesome-free/scss/brands.scss'
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
 
 html
@@ -9,3 +11,11 @@ html
 
 .navbar-brand img
 	height: 3.25rem
+
+.git
+	@extend %fa-icon
+	@extend .fab
+	margin-inline-end: .5ex
+
+	&:before
+		content: fa-content($fa-var-github)
